Add licenseSecretName values
