# apis/installer/v1alpha1/kubevault_operator_types.go
@@ -77,6 +77,8 @@ type KubevaultOperatorSpec struct {
 	// +optional
 	License string `json:"license"`
 	// +optional
+	LicenseSecretName string `json:"licenseSecretName"`
+	// +optional
 	ClusterName string `json:"clusterName"`
 	// +optional
 	RecommendationEngine RecommendationEngineConfig `json:"recommendationEngine"`
