# apis/installer/v1alpha1/kubevault_webhook_server_types.go
@@ -51,9 +51,11 @@ type KubevaultWebhookServerSpec struct {
 	ReplicaCount     int32  `json:"replicaCount"`
 	RegistryFQDN     string `json:"registryFQDN"`
 	// +optional
-	License         string    `json:"license"`
-	Server          Container `json:"server"`
-	ImagePullPolicy string    `json:"imagePullPolicy"`
+	License string `json:"license"`
+	// +optional
+	LicenseSecretName string    `json:"licenseSecretName"`
+	Server            Container `json:"server"`
+	ImagePullPolicy   string    `json:"imagePullPolicy"`
 	//+optional
 	ImagePullSecrets []string `json:"imagePullSecrets"`
 	//+optional
