# charts/kubevault/values.openapiv3_schema.yaml
@@ -15,6 +15,8 @@ properties:
         type: array
       license:
         type: string
+      licenseSecretName:
+        type: string
       monitoring:
         properties:
           agent:
@@ -40,6 +42,7 @@ properties:
         type: string
     required:
     - license
+    - licenseSecretName
     - monitoring
     - registry
     - registryFQDN
@@ -887,6 +890,8 @@ properties:
           x-kubernetes-map-type: atomic
         type: array
       license:
+        type: string
+      licenseSecretName:
         type: string
       logLevel:
         format: int32
@@ -2202,6 +2207,8 @@ properties:
           type: string
         type: array
       license:
+        type: string
+      licenseSecretName:
         type: string
       logLevel:
         format: int32
